--- a/view/templets/home/user/common_foot.html
+++ b/view/templets/home/user/common_foot.html
@@ -1,6 +1,6 @@
 
 <!--footer-->
-div class="footer" style="position:static;">
+<div class="footer" style="position:static;">
 <ul class="footer_content">
     <li>&2015 Proty diamonds ltd</li>
     <li><a href="gr_about.html">关于PROTY</a></li>
