--- a/view/templets/home/user/common_head3.html
+++ b/view/templets/home/user/common_head3.html
@@ -1,3 +1,6 @@
+<body style="background-image:url(<{$templets}>/index/images/gr_back.png);">
+<div class="logo" style="position:static;margin-top:38px;"><a href="index"><img src="images/logo.png"></a></div>
+<div class="nav_box" style="position:static;margin-top:18px;">
 <ul class="nav">
     <li class="yiyiyi">
         <a href="daoru01.html" class="yi01">俱乐部</a>
