--- a/view/templets/home/user/vip_anquan_xiugai_CG.html
+++ b/view/templets/home/user/vip_anquan_xiugai_CG.html
@@ -1,16 +1,6 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/vip.css" rel="stylesheet" type="text/css">
-<link href="css/dingdan.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/gr.js"></script>
+<{include file="common_head.html"}>
+<link href="<{$templets}>/index/css/vip.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/dingdan.css" rel="stylesheet" type="text/css">
 <script>
 $(function(){
 	$(".yi01").hover(function(){
