--- a/view/templets/home/user/common_left.html
+++ b/view/templets/home/user/common_left.html
@@ -1,32 +1,37 @@
+<div class="vip_left">
+    <div class="vip_top"><img src="<{$templets}>/index/images/vip_left.png"></div>
 <ul class="left_nav">
     <li>
         <div class="yiji">交易管理</div>
         <ul class="list_menu">
-            <li><a href="../index/vip_dingdan.html">我的订单</a></li>
-            <li><a href="../index/vip_shoucang.html">我的收藏</a></li>
-            <li><a href="../index/vip_jifen.html">我的积分</a></li>
-            <li><a href="../index/vip_shaidan.html">我的晒单</a></li>
-            <li><a href="../index/vip_yuyue.html">我的预约</a></li>
+            <li><a href="vip_dingdan">我的订单</a></li>
+            <li><a href="vip_shoucang">我的收藏</a></li>
+            <li><a href="vip_jifen">我的积分</a></li>
+            <li><a href="vip_shaidan">我的晒单</a></li>
+            <li><a href="vip_yuyue">我的预约</a></li>
         </ul>
     </li>
     <li>
         <div class="yiji">会员中心</div>
         <ul class="list_menu">
-            <li><a href="../index/vip_GRziliao.html">个人资料</a></li>
-            <li><a href="../index/vip_anquan.html">帐号安全</a></li>
-            <li><a href="../index/vip_anquan_xiugai_mima.html">修改密码</a></li>
-            <li><a href="../index/vip_ziliao.html">会员资料</a></li>
-            <li><a href="../index/vip_dizhi.html">我的地址</a></li>
-            <li><a href="../index/vip_guanzhu.html">我的关注</a></li>
-            <li><a href="../index/vip_toupiao.html">我的投票</a></li>
+            <li><a href="vip_GRziliao">个人资料</a></li>
+            <li><a href="vip_anquan">帐号安全</a></li>
+            <li><a href="vip_anquan_xiugai_mima">修改密码</a></li>
+            <li><a href="vip_ziliao">会员资料</a></li>
+            <li><a href="vip_dizhi">我的地址</a></li>
+            <li><a href="vip_guanzhu">我的关注</a></li>
+            <li><a href="vip_toupiao">我的投票</a></li>
         </ul>
     </li>
     <li>
         <div class="yiji">服务中心</div>
         <ul class="list_menu">
-            <li><a href="../index/vip_tuikuan.html">退款申请</a></li>
-            <li><a href="../index/vip_fanxiu.html">返修/换货</a></li>
-            <li><a href="../index/vip_tousu.html">投拆建议</a></li>
+            <li><a href="vip_tuikuan">退款申请</a></li>
+            <li><a href="vip_fanxiu">返修/换货</a></li>
+            <li><a href="vip_tousu">投拆建议</a></li>
         </ul>
     </li>
 </ul>
+    <div style="clear:both;"></div>
+    </div>
+
