--- a/view/templets/home/user/common_left.html
+++ b/view/templets/home/user/common_left.html
@@ -4,7 +4,7 @@
     <li>
         <div class="yiji">交易管理</div>
         <ul class="list_menu">
-            <li><a href="vip_dingdan">我的订单</a></li>
+            <li><a href="">我的订单</a></li>
             <li><a href="vip_shoucang">我的收藏</a></li>
             <li><a href="vip_jifen">我的积分</a></li>
             <li><a href="vip_shaidan">我的晒单</a></li>
